[project]
name = "job-board"
version = "0.1.0"
description = ""
authors = [
    {name = "JAYA",email = "jayakrishnasri13@gmail.com"},
    {name = "prashanth",email = "prashanthrouthu25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "job_board", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
