[project]
name = "job-board"
version = "0.1.0"
description = ""
authors = [
    {name = "JAYA",email = "jayakrishnasri13@gmail.com"},
    {name = "prashanth",email = "prashanthrouthu25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "job_board", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
